[package]
name = "etf_holdings"
version = "0.1.0"
edition = "2018"
description = "A library to fetch and parse ETF holding data from the fund's own website."

[dependencies]
async-trait = "0.1"
csv = "1.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11" }
scraper = "0.12.0"
serde =  { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["sync"] }
