[package]
name = "etf_holdings_web_server"
version = "0.1.0"
edition = "2018"
description = "API server for breaking down ETFs into their holding and give you data about profits and losses in the ETF's holdings."

[dependencies]
etf_holdings_lib = { path = "../lib" }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["sync"] }
